# cowcium-handheld

./: cowcium@cowcium
cowcium_local_server/: CMakeLists.txt  setup_packages.sh
cowcium_local_server/src/: color_sensor.cpp  color_sensor.h  gpio_power.cpp  gpio_power.h  http_server.cpp  http_server.h  index.html  logger.cpp  logger.h  main.cpp
cowcium_ml_server/: README.md  app.py  requirements.txt  run_server.sh  scaler.pkl  svm_model.pkl
test_i2c/: main.cpp
